# ray_tracing

./: .gitignore  Cargo.toml  README.md
in_one_weekend/: Cargo.toml
in_one_weekend/src/: camera.rs  color.rs  image.rs  lib.rs  main.rs  point.rs  ray.rs  thread_pool.rs  utils.rs  vec3.rs
in_one_weekend/src/hittable/: hittable_list.rs  mod.rs  sphere.rs
in_one_weekend/src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
the_next_week/: Cargo.toml
the_next_week/examples/: 10-0_final_scene.rs  4-3_spheres_on_checkered_ground.rs  4-4_checkered_spheres.rs  5-7_marbled_texture.rs  6-2_earth-mapped_sphere.rs  7-4_scene_with_rectangle_light_source.rs  7-6_empty_cornell_box.rs  8-0_cornell_box_with_two_blocks.rs  8-2_standard_cornell_box_scene.rs  9-2_cornell_box_with_blocks_of_smoke.rs
the_next_week/src/: camera.rs  lib.rs  main.rs  noise.rs  ray.rs
the_next_week/src/hittable/: cuboid.rs  hittable_list.rs  instance.rs  medium.rs  mod.rs  rect.rs  sphere.rs
the_next_week/src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
the_next_week/src/textures/: mod.rs
